[package]
name = "oneai-cli-demo"
description = "OneAI CLI — interactive REPL and non-interactive inference"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oneai-cli"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
oneai-core = { workspace = true }
oneai-app = { workspace = true }
oneai-tool = { workspace = true }
oneai-memory = { workspace = true }
oneai-rag = { workspace = true }
oneai-workflow = { workspace = true }
oneai-persistence = { workspace = true }
oneai-parser = { workspace = true }
oneai-provider = { workspace = true }
oneai-agent = { workspace = true }
oneai-uniffi = { workspace = true }
oneai-trace = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
oneai-domain = { workspace = true }
oneai-skill = { workspace = true }
oneai-eval = { workspace = true }
oneai-studio = { workspace = true }
syntect = "5.2"
pulldown-cmark = "0.11"
unicode-width = "0.2"