[package]
name = "oneai-cli"
description = "OneAI CLI — interactive REPL and non-interactive inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ai", "agent", "cli", "tui", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "oneai"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["bracketed-paste"] }
oneai-core = { workspace = true }
oneai-app = { workspace = true }
oneai-tool = { workspace = true }
oneai-memory = { workspace = true }
oneai-rag = { workspace = true }
oneai-workflow = { workspace = true }
oneai-persistence = { workspace = true }
oneai-parser = { workspace = true }
oneai-provider = { workspace = true }
oneai-agent = { workspace = true }
oneai-uniffi = { workspace = true }
oneai-trace = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
oneai-domain = { workspace = true }
oneai-skill = { workspace = true }
oneai-eval = { workspace = true }
oneai-studio = { workspace = true }
oneai-mcp = { workspace = true }
oneai-a2a = { workspace = true }
oneai-wasm = { workspace = true }
syntect = "5.2"
pulldown-cmark = "0.11"
unicode-width = "0.2"